--- a/injection/patterns.scss
+++ b/injection/patterns.scss
@@ -121,8 +121,6 @@ $baseline-px:  16px;
   background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
-  -ms-behavior: url("#{asset_path('backgroundsize.min.htc')}");
-  behavior: url("#{asset_path('backgroundsize.min.htc')}");
 }
 
 // X-axis translation
